[package]
name = "seamless_macros"
version = "0.8.0"
authors = ["James Wilson <james@jsdw.me>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jsdw/seamless"
categories = ["web-programming", "web-programming::http-server", "asynchronous"]
keywords = ["api", "http", "rpc", "json"]
description = """
Macros to complement the 'seamless' library
"""

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
# All for doc examples (seamless is a lower version to allow publishing)
seamless = { version = "0.7.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
