[package]
name = "seamless"
version = "0.2.0"
authors = ["James Wilson <james@jsdw.me>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jsdw/seamless"
categories = ["web-programming", "web-programming::http-server", "asynchronous"]
keywords = ["api", "http", "rpc", "json"]
description = """
An opinionated library to easily create RPC style JSON APIs
"""

[features]
default = ["uuid", "chrono"]

[dependencies]
async-trait = "0.1.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "0.2.1"
seamless_macros = { version = "0.2.0", path = "../seamless-macros" }

# impls for these if we want them:
uuid = { version = "0.8", optional = true, features = ["serde"] }
chrono = { version = "0.4.11", optional = true, features = ["serde"] }

[dev-dependencies]
trybuild = "1.0"
pretty_assertions = "0.6.1"
thiserror = "1.0.23"
tokio = { version = "1.1.0", features = ["rt", "rt-multi-thread"] }
