[package]
name = "seamless"
version = "0.11.0"
authors = ["James Wilson <james@jsdw.me>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jsdw/seamless"
categories = ["web-programming", "web-programming::http-server", "asynchronous"]
keywords = ["api", "http", "rpc", "json"]
description = """
An opinionated library to easily create RPC style JSON APIs
"""

[features]
default = ["uuid"]

[dependencies]
async-trait = "0.1.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "0.2.1"
seamless_macros = { version = "0.10.0", path = "../seamless-macros" }
futures = "0.3.15"

# Optional dependencies to impl ApiBody for.
uuid = { version = "1", optional = true }

[dev-dependencies]
trybuild = "1.0.53"
pretty_assertions = "0.6.1"
serde_json = "1"
thiserror = "1.0.23"
tokio = { version = "1.1.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.6.7", features = ["compat"] }
warp = "0.3.0"
bytes = "1.0.1"

[dev-dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
rev = "c24f15c1"
